--- a/client-ghiaccio/src/css/MyNavbar.css
+++ b/client-ghiaccio/src/css/MyNavbar.css
@@ -5,13 +5,15 @@
   left: 0;
   width: 100%;
   height: 64px;
-  background-color: #016FB9; /* blu principale */
+  background-color: #016FB9;
+  /* blu principale */
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   border-bottom: 2px solid #22AED1;
   z-index: 1000;
 }
 
 /* Brand centrato */
+
 .brand-centered {
   position: absolute;
   left: 50%;
